add tabs for about/createdBy related works in resource page

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -904,6 +904,8 @@ vertical-align:middle;}
 
 .resource .data#perma { background-color:#ffffff; padding:0 35px 50px 35px;}
 
+#perma #same .provider.tol { background:white;border-radius:21px;}
+#perma #same .provider.tol img { width:42px;height:42px;}
 
 /* #top-left { position:absolute; top:calc(100% + 40px);right:40px; } */
 #perma > div { position:relative; background:#efefef; display:flex;align-items: center; justify-content:flex-start; margin-bottom:0px;
@@ -973,18 +975,18 @@ vertical-align:middle;}
 #popHoverM .resource .data .sub > .subgroup > .subsub > h4::before,
 #popHoverM .resource .data .group h4::before { opacity:1 !important; }
 
-#popHoverM > div:last-child { width:953px; box-shadow:0 3px 4px #cecece,0 -1px 4px #cecece; 
+#popHoverM > div:last-child { width:953px; box-shadow:0 3px 4px #353232,0 -1px 4px #cecece; 
    left:calc((100vw - 1440px)/2 + 324px) !important; /* TODO fix when width under ~1250px */
 }
 #popHoverM > div:last-child .resource .data { padding-left:53px; padding-bottom:35px; padding-top:27px; }
 #popHoverM > div:last-child .resource .data .react-tabs { background-color:#fcf5e2; min-width:898px; margin-left:-25px;margin-top:20px; min-height:150px; font-size:0;}
-.react-tabs__tab { border:none;border-radius:0; width:calc(25% - 1px); font-size:10px; padding:0; text-align:center; line-height:40px; bottom:-1px !important; 
+#popHoverM .react-tabs__tab { border:none;border-radius:0; width:calc(25% - 1px); font-size:10px; padding:0; text-align:center; line-height:40px; bottom:-1px !important; 
    background-color:#fce08d; border-right:1px solid white; 
 }
-.react-tabs__tab:last-child { width:calc(25%); border:none; }
-.react-tabs__tab.react-tabs__tab--selected {background-color:#fcf5e2;  }
-.react-tabs__tab.react-tabs__tab--disabled { color:rgba(0,0,0,0.25) !important; }
-.react-tabs__tab.react-tabs__tab b { font-weight:900; }
+#popHoverM .react-tabs__tab:last-child { width:calc(25%); border:none; }
+#popHoverM .react-tabs__tab.react-tabs__tab--selected {background-color:#fcf5e2;  }
+#popHoverM .react-tabs__tab.react-tabs__tab--disabled { color:rgba(0,0,0,0.25) !important; }
+#popHoverM .react-tabs__tab.react-tabs__tab b { font-weight:900; }
 
 #popHoverM .react-tabs__tab-list { margin-bottom:0;}
 #popHoverM .react-tabs__tab-panel { padding:25px;}
@@ -1589,16 +1591,26 @@ TODO
    height:24px; right:35px; cursor:pointer; padding-top:14px; color:#343434;}
 .resource .data.related h2 + a:hover { color:#d73449;border-color:#d73449; }
 .resource .data.related > div > div:first-child {display:flex;align-items: center;}
-.resource .data.related > div > div:last-child { display:flex; overflow:hidden; }
-.resource .data.related > div > div:last-child > div {display:inline-block; width:185px;margin-right:35px; flex-shrink:0;}
-.resource .data.related > div > div:last-child > div .header { height:185px; }
-.resource .data.related > div > div:last-child > :nth-child(n+5) { display:none; }
-.resource .data.related > div > div:last-child > :nth-child(4n+4) { margin-right:0; }
-.resource .data.related > div > div:last-child > div a { color:#343434; font-weight:700; font-size:13px; border-color:#343434;}
-.resource .data.related > div > div:last-child > div > div { color:#343434; font-weight:500; font-size:15px; margin:30px 0 20px 0; 
+.resource .data.related > div div.rel-or-crea { display:flex; overflow:hidden; }
+.resource .data.related > div div.rel-or-crea > div {display:inline-block; width:185px;margin-right:35px; flex-shrink:0;}
+.resource .data.related > div div.rel-or-crea > div .header { height:185px; }
+.resource .data.related > div div.rel-or-crea > :nth-child(n+5) { display:none; }
+.resource .data.related > div div.rel-or-crea > :nth-child(4n+4) { margin-right:0; }
+.resource .data.related > div div.rel-or-crea > div a { color:#343434; font-weight:700; font-size:13px; border-color:#343434;}
+.resource .data.related > div div.rel-or-crea > div > div { color:#343434; font-weight:500; font-size:15px; margin:30px 0 20px 0; 
    position:relative; }
-.resource .data.related > div > div:last-child > div > div .lang { display:none; position:absolute !important; top:calc(100% - 7px); }
+.resource .data.related > div div.rel-or-crea > div > div .lang { display:none; position:absolute !important; top:calc(100% - 7px); }
 /* .resource .data.related > div > div:last-child > div > div:hover .lang { display:inline-block; } */
+
+.resource .data.related .react-tabs .rel-or-crea { background: rgba(255,255,255,0.65); padding:20px;}
+.resource .data.related .react-tabs .rel-or-crea > div { margin-right: 22px !important; }
+.resource .data.related .react-tabs__tab-list { margin-bottom:0; }
+
+.resource .data.related .react-tabs__tab,
+.resource .data.related .react-tabs__tab.react-tabs__tab--selected,
+.resource .data.related .react-tabs__tab:focus { box-shadow:none; border:none; border-radius:0;padding:15px 0px; width:206px; text-align:center;}
+
+.resource .data.related .react-tabs__tab-list { border:none; font-weight:600; } 
 
 /* ------------------------------------------------------------------------------------------------------------------------ extended properties */
 
@@ -2225,7 +2237,7 @@ body {overflow-x:hidden; }
 }
 .searchWidget.datatype.corporation .img { width:45px; margin-left:-17px; margin-right:7px;}
 
-.searchWidget [lang="sa-x-iast"] { word-break: break-all; }
+[lang="sa-x-iast"] { word-break: break-all; }
 
 .widget label { text-transform:capitalize; /*word-break: break-all;*/ }
 .searchWidget > label > span,
