--- a/src/components/App.css
+++ b/src/components/App.css
@@ -833,9 +833,20 @@ h4:not(:hover) > .lang
 .resource .data#outline .root + div .ulink { width:auto; }
 .resource .data#outline .root + div .pType a { pointer-events: none; }
 .resource .data#outline .root + div .pType span { font-size:10px; font-weight:700; opacity:0.65; flex-shrink:0; }
-.resource .data#outline .root + div .pType span:before { content:'';width:1px;border-left:2px solid #343434;display: inline-block;height:14px;vertical-align:middle;
-   padding-left:5px;margin-left:5px;
+.resource .data#outline .root + div .permalink::before,
+.resource .data#outline .root + div .hasImg::before,
+.resource .data#outline .root + div .pType span:before { content:'';width:1px;border-left:1px solid #343434;display: inline-block;height:16px;
+   vertical-align:middle; padding-left:6px;margin-left:7px; margin-bottom:1px; 
 }
+
+.resource .data#outline .root + div .permalink {  opacity:0; margin-left:0px; cursor:pointer; }
+.resource .data#outline .root + div .top:hover .permalink  {  opacity:1; }
+.resource .data#outline .root + div .permalink img { width:16px; vertical-align: middle !important; }
+
+.resource .data#outline .root + div .permalink::before,
+.resource .data#outline .root + div .hasImg::before { opacity:0.65;}
+.resource .data#outline .root + div .hasImg img { width:18px; opacity:0.8; vertical-align: middle !important; }
+.resource .data#outline .root + div .hasImg:hover img { opacity:1; }
 
 .resource .data#outline .root + div span.top { display: block;  margin-top:5px; }
 .resource .data#outline .root + div > .top:first-child { margin-top:0px; }
