--- a/src/components/App.css
+++ b/src/components/App.css
@@ -848,6 +848,11 @@ h4:not(:hover) > .lang
 .resource .data#outline .root + div .permalink img { width:16px; vertical-align: middle !important; }
 .resource .data#outline .root + div .top:hover .permalink:hover { opacity:1; }
 
+/*
+.resource .data#outline .root + div .hasImg { opacity:0; }
+.resource .data#outline .root + div .top:hover .hasImg { opacity:1; }
+*/
+
 .resource .data#outline .root + div .permalink::before,
 .resource .data#outline .root + div .hasImg::before { opacity:0.65;}
 .resource .data#outline .root + div .hasImg img { width:18px; opacity:0.8; vertical-align: middle !important; }
@@ -855,8 +860,10 @@ h4:not(:hover) > .lang
 
 .resource .data#outline .root + div .parTy + span { margin-right:5px;}
 
+.resource .data#outline .root + div .abs { position:absolute; width:80px;}
+
 .resource .data#outline .root + div span.top { display: block;  margin-top:5px; }
-.resource .data#outline .root + div > .top:first-child { margin-top:0px; }
+.resource .data#outline .root + div > .top:first-child { margin-top:3px; }
 .resource .data#outline .root + div span.top :not(.lang) { display:inline; vertical-align:top; }
 
 
@@ -1314,6 +1321,9 @@ h4:not(.first)
 .resource .data > :not([data-prop="bf:identifiedBy"]):not([data-prop="bdo:volumeHasEtext"]) .propCollapse h4:not(.first)::before,
 .resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .propCollapse > div > div > h4:not(.first)::before { padding:8px 10px !important; top:-8px !important; }
 
+.resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .propCollapse { padding-left:0; }
+.resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) .expand { display:none; }
+.resource .data.ext-props > :not([data-prop="bf:identifiedBy"]) { align-items: baseline;}
 
 .resource .data > :not([data-prop="bdo:volumeHasEtext"]) .propCollapseHeader h4:not(.first) .hover-menu,
 .resource .data > :not([data-prop="bf:identifiedBy"]):not([data-prop="bdo:volumeHasEtext"]) .propCollapse h4:not(.first) .hover-menu,
